# MLOPS_p1

./: .coverage  README.md  data.dvc  pyproject.toml  requirements.txt  tasks.py
.dvc/: config
.github/workflows/: tests.yaml
dockerfiles/: api.dockerfile  train.dockerfile  wandb.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
lightning-test/davry9ti/checkpoints/: epoch=9-step=1870.ckpt
models/: model_v1.pth  model_v2.pth
src/mlops_p1/: lightning_train.py  train.py  train2.py  visualize.py
src/mlops_p1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data.py  test_model.py
wandb/: latest-run
wandb/run-20251022_171728-9ft8cfm5/: run-9ft8cfm5.wandb
wandb/run-20251022_171728-9ft8cfm5/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20251022_172143-fyu5yi9y/: run-fyu5yi9y.wandb
wandb/run-20251022_172143-fyu5yi9y/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251023_155536-davry9ti/: run-davry9ti.wandb
wandb/run-20251023_155536-davry9ti/files/: config.yaml  requirements.txt  wandb-metadata.json
