[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_p1"
version = "0.0.1"
description = "DTU MLOps project"
authors = [
  { name = "Francesco Centomo", email = "francesco100mo@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",]
dynamic = ["dependencies", "optional-dependencies"]


[project.scripts]
train = "mlops_p1.train:main"
evaluate = "mlops_p1.evaluate:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements_dev.txt"] }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "E", "W"]

[tool.coverage.run]
omit = ["tests/*"]
